// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditableListInput renders correctly when \`error\` is passed 1`] = `
<FormField
  name="Editable-List-Input"
>
  <FormGroup
    className="inline-input-btn"
    unstackable={true}
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={true}
      fluid={true}
      name="1"
      placeholder="Testando:"
      type="text"
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <InlineError
    text="Something went wrong..."
  />
  <ListField
    onRemove={[Function]}
    renderValue={[Function]}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando1",
      ]
    }
  />
</FormField>
`;

exports[`EditableListInput renders correctly when \`type\` is text 1`] = `
<FormField
  name="Editable-List-Input"
>
  <FormGroup
    className="inline-input-btn"
    unstackable={true}
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={false}
      fluid={true}
      name="1"
      placeholder="Testando:"
      type="text"
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <ListField
    onRemove={[Function]}
    renderValue={[Function]}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando1",
      ]
    }
  />
</FormField>
`;

exports[`EditableListInput renders correctly when \`type\` is url 1`] = `
<FormField
  name="Editable-List-Input"
>
  <FormGroup
    className="inline-input-btn"
    unstackable={true}
    widths={2}
  >
    <FormInput
      as={[Function]}
      control={[Function]}
      error={false}
      fluid={true}
      name="1"
      placeholder="Testando:"
      type="url"
      width={13}
    />
    <FormButton
      as={[Function]}
      color="teal"
      content="Add"
      control={[Function]}
      onClick={[Function]}
      width={3}
    />
  </FormGroup>
  <ListField
    onRemove={[Function]}
    renderValue={[Function]}
    style={
      Object {
        "marginBottom": "14px",
        "maxHeight": "100px",
        "overflowY": "auto",
      }
    }
    values={
      Array [
        "testando1",
      ]
    }
  />
</FormField>
`;
